--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="Header"> <h1> This is Header </h1></div>
-    <div id="root">
-        <!-- <h1>
+    <!-- <div id="Header"> <h1> This is Header </h1></div> -->
+    <!-- <div id="root">
+        <h1>
             Namaste Everyone
         </h1>   -->
    
@@ -25,9 +25,9 @@
         </div>
      -->
 
-     Not rendered
-    </div>
-    <div id="Footer"> <h1> This is Footer </h1></div>
+     <!-- Not rendered
+    </div> --> 
+    <!-- <div id="Footer"> <h1> This is Footer </h1></div> -->
 <!-- <script>
     const heading = document.createElement("h1")
     heading.innerHTML="NamasteReact from Javascript";
@@ -36,6 +36,12 @@
 </script> -->
 <!-- <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
 <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script> -->
+
+<!-- =====================Lecture 4=============== -->
+
+<div id="root">
+ Not rendered
+</div>
 
 <script type="module" src="app.js"></script>
 
