--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
  Not rendered
 </div>
 
-<script type="module" src="app.js"></script>
+<script type="module" src="src/app.js"></script>
 
 </body>
 </html>
